improve dark mode colors + fix dark logo in chrome

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -47,7 +47,7 @@ details:has(+ details) {
 }
 
 .toolbar input {
-  height: 20px;
+  height: 22px;
 }
 .toolbar div {
   vertical-align: bottom;
